--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
 
   <div class="footer">
-    <p>Розробив <strong>Толік</strong> | Демонстрація RSA ЕЦП</p>
+    <p>Розробив <strong>jrxnrs</strong> | Демонстрація RSA ЕЦП</p>
   </div>
   <div class="author-card">
   <img src= "avatar.jpg" alt="Author photo">
@@ -96,3 +96,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
